* Add code to BOM

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Rename 'done' button to 'do'
* Fill production number only in waiting state

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Rename Uom to Unit for bill of material
* Rename Uom to Unit for production
* Reschedule planned date for late productions

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Rename product lead times to production lead times
* Remove support for Python 3.7
* Add support for Python 3.11
* Create lot for output product when needed
* Assign all possible productions when trying

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Show production on stock move form
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Show warning when output product's list price is empty
* Remove unique product constraint on BOM

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow productions to be automatically assigned
* Default to ordering productions by date

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Add production picking and output locations
* Add cron task to reschedule past productions
* Allow lost_found as output of production
* Keep cost of unused input products
* Use the shipment assign wizard for production
* Rename production state from cancel to cancelled

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add origin to production