@@ -1,3 +1,4 @@
+* Allow cancellation of done production
 * Add code to BOM
 
 Version 7.2.0 - 2024-04-29
